added sections fix bugs
Added section benefits, why Us?,Offer. Fixed some bugs.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" >
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
       <link href="Contact.css" rel="stylesheet" type="text/css" media="all">
+        <link href="Animate.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <main>
@@ -16,17 +17,18 @@
           <header class="fullbox">
 
             <div class="fullboxmeu" id="fullboxmeu">
-            <nav id="navigation" class="menu-link menu">
-             <ul>
+              <div id="navigation" class="menu menu-link">
+                <nav>
+                 <ul>
+                     <li><a href="#section4" class="active">top</a></li>
+                     <li><a href="#section1">Outsourcing IT</a></li>
+                     <li><a href="#section2">Oferta</a></li>
+                     <li><a href="#section3">kontakt</a></li>
 
-                 <li><a href="#section1">Section 1</a></li>
-                 <li><a href="#section2" >Section 2</a></li>
-                 <li><a href="#section3">Section 3</a></li>
-                 <li><a href="#section4">top</a></li>
 
-             </ul>
-            </nav>
-
+                 </ul>
+                </nav>
+              </div >
                 <div class="logobox">
                   <div class="logo" id="logo">
                   </div>
@@ -36,56 +38,102 @@
             </div>
           </header>
 
+            <div class="contentboxwhite" id="section1">
+              <div class="container">
+                <div class="row row-50 justify-content-center justify-content-lg-between">
+                  <div class="col-md-6 col-lg-6 col-xs-6 animated fadeInLeft" id="benefits">
+                       <h3>  Korzyści Outsourcing IT </h3>
+                          <ul>
+                            <li>Zmniejszone koszty operacyjne</li>
+                            <li>Dostęp do nowoczesnych technologi</li>
+                            <li>Kompleksowa usługa</li>
+                            <li>Nieustane wsparcie informatyczne</li>
+                            <li>Szybsze wprowadzanie innowacji  w firmie</li>
+                            <li>Specjalistyczna wiedza oraz doświadczenie</li>
+                            <li>Bezpieczeństwo danych</li>
 
-          <div class="contentboxgrey" id="section1">
-            Sekcja pierwsza
-
-
-
-          </div>
-          <div class="contentboxwhite" id="section2">
-            <div class="container margintop">
-              <div class="row row-50 justify-content-center justify-content-lg-between">
-                <div class="col-md-10 col-lg-6 col-xl-5">
-                  <h3>A Few Words About Us</h3>
-                  <p>We are a team of talented marketers who happen to love creating smart ideas for those who will have us. We use our creative potential to provide the smartest ideas.</p>
-                  <p>We have a wide range of experience, expertise and tools to create and implement your campaigns, from carefully curating awesome content to optimising it with our great SEO powers as well as outdoor marketing skills.</p><a class="button button-lg button-primary button-winona" href="about-us.html"><div class="content-original">Learn more</div><div class="content-dubbed">Learn more</div></a>
+                          </ul>
+                  </div>
+                  <div class="col-md-6 col-lg-6 col-xs-6">
+                    <img class="img-responsive" src="img/header2.jpg" alt="" width="560" height="340">
+                  </div>
                 </div>
-                <div class="col-md-10 col-lg-6"><img class="img-responsive" src="img/header2.jpg" alt="" width="560" height="340">
+              </div>
+          </div>
+          <div class="contentboxgrey">
+            <div class="container">
+              <div class="row row-50 justify-content-center justify-content-lg-between">
+                <div class="col-md-12 col-lg-12 col-xs-12 animated fadeInUp">
+                  <h3>DLACZEGO MY?</h3>
+                  <div class="divide"> </div>
+                  <div class="arrow-down"> </div>
+                  <p>w oparciu o nasze doświadczenia, wypracowaliśmy efektywny sposób obsługi i zarządzania systemami informatycznymi naszych klientów. Trzonem tego systemu jest zdobyta i stale poszerzana wiedza naszych pracowników i współpracowników.
+                  <p>Naszym głównym atutem jest jakość świadczonych usług. Obsługujemy zarówno klientów biznesowych,
+                  instytucje państwowe, jednostki edukacyjne jak i osoby prywatne, w gronie naszych klientów znajdują się duże przedsiębiorstwa i koncerny międzynarodowe.
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="paralax" id="section3">
+          <div class="paralax">
             Sekcja trzecia
           </div>
-          <div class="contentboxwhite" id="section1">
+
+          <div class="contentboxwhite2" id="section2">
             <div class="container">
+              <h3>OFERTA</h3>
+              <div class="divide"> </div>
+              <div class="arrow-down"> </div>
               <div class="row">
                 <div class="col-sm center">
                   <div class="icon service">
                   </div>
                   <h2>  Quick Support </h2>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
                 </div>
                 <div class="col-sm center">
                   <div class="icon linechart">
                   </div>
                   <h2>  Improvement </h2>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
                 </div>
                 <div class="col-sm center">
                   <div class="icon scheme">
                   </div>
                   <h2> Architecture </h2>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
                 </div>
                 <div class="col-sm center">
                   <div class="icon settings">
                   </div>
                   <h2> Fix </h2>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm center">
+                  <div class="icon service">
+                  </div>
+                  <h2>  Quick Support </h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
+                </div>
+                <div class="col-sm center">
+                  <div class="icon linechart">
+                  </div>
+                  <h2>  Improvement </h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
+                </div>
+                <div class="col-sm center">
+                  <div class="icon scheme">
+                  </div>
+                  <h2> Architecture </h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
+                </div>
+                <div class="col-sm center">
+                  <div class="icon settings">
+                  </div>
+                  <h2> Fix </h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
                 </div>
               </div>
             </div>
@@ -93,21 +141,21 @@
 <!-- <div class="contentboxwhite" id="section2">
   Sekcja czwarta
 </div> -->
-  <footer >
+  <footer id="section3" >
     <!-- <div class="row"> -->
       <div class=" col-sm ">
         <form class="form" id="contactForm" method="post" novalidate action="send-script.php">
             <div class="form-row">
                 <label for="field-name">Name*</label>
-                <input value="marcin" type="text" name="name" required id="field-name" data-error="Wypełnij to pole" pattern="[a-zA-ZąĄććęęłŁńŃóÓśŚżŻŹŹ ]+">
+                <input  type="text" name="name" required id="field-name" data-error="Wypełnij to pole" pattern="[a-zA-ZąĄććęęłŁńŃóÓśŚżŻŹŹ ]+">
             </div>
             <div class="form-row">
                 <label for="field-email">Email*</label>
-                <input value="email@wp.plp" type="email" name="email" required id="field-email" data-error="Wpisz poprawny email" pattern="[^@\s]+@[^@\s]+\.[^@\s]+">
+                <input  type="email" name="email" required id="field-email" data-error="Wpisz poprawny email" pattern="[^@\s]+@[^@\s]+\.[^@\s]+">
             </div>
             <div class="form-row">
                 <label for="field-message">Message*</label>
-                <textarea name="message" required data-error="Musisz wypełnić pole" id="field-message" pattern=".+">dasdasdsad</textarea>
+                <textarea name="message" required data-error="Musisz wypełnić pole" id="field-message" pattern=".+">...</textarea>
             </div>
             <div class="form-row">
                 <label class="checkbox-cnt">
@@ -127,7 +175,17 @@
         <div class="col-sm">
           <div class="block">
           <span class="contact1">Zadzwoń</span> <span class="contact2">12 234 56 78</span>
+          <div class="footer1">
+            <p>  VERICOM usługi informatyczne </p>
+            <p>  Tel:  502 481 334 </p>
+            <p>  Parkowa 53 /2</p>
+            <p>  41-303 Dąbrowa Górnicza </p>
+            <p>  NIP: 629-207-53-89 </p>
           </div>
+          </div>
+
+
+
         </div>
 
     <!-- </div> -->
