top screen changed.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section class="container-fluid">
 
-          <header class="fullbox">
+          <header class="fullbox2">
 
             <div class="fullboxmeu" id="fullboxmeu">
               <div id="navigation" class="menu menu-link">
@@ -75,9 +75,7 @@
             </div>
           </div>
 
-          <div class="paralax">
-            Sekcja trzecia
-          </div>
+
 
           <div class="contentboxwhite2" id="section2">
             <div class="container">
