--- a/index.html
+++ b/index.html
@@ -1,203 +1,225 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
 
-      <link href="reset.css" rel="stylesheet" type="text/css" media="all">
-    <link rel="stylesheet" href="css/bootstrap.min.css" >
-    <link href="style.css" rel="stylesheet" type="text/css" media="all">
-      <link href="Contact.css" rel="stylesheet" type="text/css" media="all">
-        <link href="Animate.css" rel="stylesheet" type="text/css" media="all">
-  </head>
-  <body>
-    <main>
-        <section class="container-fluid">
+<head>
+  <meta charset="utf-8">
+  <title></title>
 
-          <header class="fullbox2">
+  <link href="reset.css" rel="stylesheet" type="text/css" media="all">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link href="style.css" rel="stylesheet" type="text/css" media="all">
+  <link href="Contact.css" rel="stylesheet" type="text/css" media="all">
+  <link href="Animate.css" rel="stylesheet" type="text/css" media="all">
+  <link href="test.css" rel="stylesheet" type="text/css" media="all">
+  <link href="hamburger.css" rel="stylesheet" type="text/css" media="all">
+</head>
 
-            <div class="fullboxmeu" id="fullboxmeu">
-              <div id="navigation" class="menu menu-link">
-                <nav>
-                 <ul>
-                     <li><a href="#section4" class="active">top</a></li>
-                     <li><a href="#section1">Outsourcing IT</a></li>
-                     <li><a href="#section2">Oferta</a></li>
-                     <li><a href="#section3">kontakt</a></li>
+<body>
+  <main>
+    <section class="container-fluid">
 
+      <header class="fullbox2 dotted">
 
-                 </ul>
-                </nav>
-              </div >
-                <div class="logobox">
-                  <div class="logo" id="logo">
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </header>
-
-            <div class="contentboxwhite" id="section1">
-              <div class="container">
-                <div class="row row-50 justify-content-center justify-content-lg-between">
-                  <div class="col-md-6 col-lg-6 col-xs-6 animated fadeInLeft" id="benefits">
-                       <h3>  Korzyści Outsourcing IT </h3>
-                          <ul>
-                            <li>Zmniejszone koszty operacyjne</li>
-                            <li>Dostęp do nowoczesnych technologi</li>
-                            <li>Kompleksowa usługa</li>
-                            <li>Nieustane wsparcie informatyczne</li>
-                            <li>Szybsze wprowadzanie innowacji  w firmie</li>
-                            <li>Specjalistyczna wiedza oraz doświadczenie</li>
-                            <li>Bezpieczeństwo danych</li>
-
-                          </ul>
-                  </div>
-                  <div class="col-md-6 col-lg-6 col-xs-6">
-                    <img class="img-responsive" src="img/header2.jpg" alt="" width="560" height="340">
-                  </div>
-                </div>
-              </div>
+        <div class="fullboxmeu" id="fullboxmeu">
+          <div class="hamburger logobox" id="hamburger" onclick="myFunction()">
+            <!-- <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a> -->
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
           </div>
-          <div class="contentboxgrey">
-            <div class="container">
-              <div class="row row-50 justify-content-center justify-content-lg-between">
-                <div class="col-md-12 col-lg-12 col-xs-12 animated fadeInUp">
-                  <h3>DLACZEGO MY?</h3>
-                  <div class="divide"> </div>
-                  <div class="arrow-down"> </div>
-                  <p>w oparciu o nasze doświadczenia, wypracowaliśmy efektywny sposób obsługi i zarządzania systemami informatycznymi naszych klientów. Trzonem tego systemu jest zdobyta i stale poszerzana wiedza naszych pracowników i współpracowników.
-                  <p>Naszym głównym atutem jest jakość świadczonych usług. Obsługujemy zarówno klientów biznesowych,
-                  instytucje państwowe, jednostki edukacyjne jak i osoby prywatne, w gronie naszych klientów znajdują się duże przedsiębiorstwa i koncerny międzynarodowe.
-                </div>
-              </div>
+          <div class="logobox">
+            <div class="logo" id="logo">
+            </div>
+          </div>
+
+
+          <div id="navigation" class="menu menu-link">
+
+
+            <div >
+              <ul class="topnav" id="myTopnav">
+                <li><a href="/">Home</a></li>
+                <li><a href="/">O Nas</a></li>
+                <li><a href="/">Oferta</a></li>
+                <li><a href="/">Referencje</a></li>
+                <li><a href="/">Pomoc zdalna</a></li>
+                <li><a href="/">Kontakt</a></li>
+              </ul>
+
             </div>
           </div>
 
 
 
-          <div class="contentboxwhite2" id="section2">
-            <div class="container">
-              <h3>OFERTA</h3>
+
+
+
+        </div>
+
+
+      </header>
+
+      <div class="contentboxwhite" id="section1">
+        <div class="container">
+          <div class="row row-50 justify-content-center justify-content-lg-between">
+            <div class="col-md-6 col-lg-6 col-xs-6 animated fadeInLeft" id="benefits">
+              <h3>  Korzyści Outsourcing IT </h3>
+              <ul>
+                <li>Zmniejszone koszty operacyjne</li>
+                <li>Dostęp do nowoczesnych technologi</li>
+                <li>Kompleksowa usługa</li>
+                <li>Nieustane wsparcie informatyczne</li>
+                <li>Szybsze wprowadzanie innowacji w firmie</li>
+                <li>Specjalistyczna wiedza oraz doświadczenie</li>
+                <li>Bezpieczeństwo danych</li>
+
+              </ul>
+            </div>
+            <div class="col-md-6 col-lg-6 col-xs-6">
+              <img class="img-responsive" src="img/header2.jpg" alt="" width="560" height="340">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="contentboxgrey">
+        <div class="container">
+          <div class="row row-50 justify-content-center justify-content-lg-between">
+            <div class="col-md-12 col-lg-12 col-xs-12 animated fadeInUp">
+              <h3>DLACZEGO MY?</h3>
               <div class="divide"> </div>
               <div class="arrow-down"> </div>
-              <div class="row">
-                <div class="col-sm center">
-                  <div class="icon service">
-                  </div>
-                  <h2>  Quick Support </h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
-                </div>
-                <div class="col-sm center">
-                  <div class="icon linechart">
-                  </div>
-                  <h2>  Improvement </h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
-                </div>
-                <div class="col-sm center">
-                  <div class="icon scheme">
-                  </div>
-                  <h2> Architecture </h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
-                </div>
-                <div class="col-sm center">
-                  <div class="icon settings">
-                  </div>
-                  <h2> Fix </h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-sm center">
-                  <div class="icon service">
-                  </div>
-                  <h2>  Quick Support </h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
-                </div>
-                <div class="col-sm center">
-                  <div class="icon linechart">
-                  </div>
-                  <h2>  Improvement </h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
-                </div>
-                <div class="col-sm center">
-                  <div class="icon scheme">
-                  </div>
-                  <h2> Architecture </h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
-                </div>
-                <div class="col-sm center">
-                  <div class="icon settings">
-                  </div>
-                  <h2> Fix </h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
-                </div>
-              </div>
+              <p>w oparciu o nasze doświadczenia, wypracowaliśmy efektywny sposób obsługi i zarządzania systemami informatycznymi naszych klientów. Trzonem tego systemu jest zdobyta i stale poszerzana wiedza naszych pracowników i współpracowników.
+                <p>Naszym głównym atutem jest jakość świadczonych usług. Obsługujemy zarówno klientów biznesowych, instytucje państwowe, jednostki edukacyjne jak i osoby prywatne, w gronie naszych klientów znajdują się duże przedsiębiorstwa i koncerny międzynarodowe.
             </div>
           </div>
-<!-- <div class="contentboxwhite" id="section2">
+        </div>
+      </div>
+
+
+
+      <div class="contentboxwhite2" id="section2">
+        <div class="container">
+          <h3>OFERTA</h3>
+          <div class="divide"> </div>
+          <div class="arrow-down"> </div>
+          <div class="row">
+            <div class="col-sm center">
+              <div class="icon service">
+              </div>
+              <h2>  Quick Support </h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
+            </div>
+            <div class="col-sm center">
+              <div class="icon linechart">
+              </div>
+              <h2>  Improvement </h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
+            </div>
+            <div class="col-sm center">
+              <div class="icon scheme">
+              </div>
+              <h2> Architecture </h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
+            </div>
+            <div class="col-sm center">
+              <div class="icon settings">
+              </div>
+              <h2> Fix </h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm center">
+              <div class="icon service">
+              </div>
+              <h2>  Quick Support </h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
+            </div>
+            <div class="col-sm center">
+              <div class="icon linechart">
+              </div>
+              <h2>  Improvement </h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
+            </div>
+            <div class="col-sm center">
+              <div class="icon scheme">
+              </div>
+              <h2> Architecture </h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
+            </div>
+            <div class="col-sm center">
+              <div class="icon settings">
+              </div>
+              <h2> Fix </h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="contentboxwhite" id="section2">
   Sekcja czwarta
 </div> -->
-  <footer id="section3" >
-    <!-- <div class="row"> -->
-      <div class=" col-sm ">
-        <form class="form" id="contactForm" method="post" novalidate action="send-script.php">
+      <footer id="section3">
+        <!-- <div class="row"> -->
+        <div class=" col-sm ">
+          <form class="form" id="contactForm" method="post" novalidate action="send-script.php">
             <div class="form-row">
-                <label for="field-name">Name*</label>
-                <input  type="text" name="name" required id="field-name" data-error="Wypełnij to pole" pattern="[a-zA-ZąĄććęęłŁńŃóÓśŚżŻŹŹ ]+">
+              <label for="field-name">Name*</label>
+              <input type="text" name="name" required id="field-name" data-error="Wypełnij to pole" pattern="[a-zA-ZąĄććęęłŁńŃóÓśŚżŻŹŹ ]+">
             </div>
             <div class="form-row">
-                <label for="field-email">Email*</label>
-                <input  type="email" name="email" required id="field-email" data-error="Wpisz poprawny email" pattern="[^@\s]+@[^@\s]+\.[^@\s]+">
+              <label for="field-email">Email*</label>
+              <input type="email" name="email" required id="field-email" data-error="Wpisz poprawny email" pattern="[^@\s]+@[^@\s]+\.[^@\s]+">
             </div>
             <div class="form-row">
-                <label for="field-message">Message*</label>
-                <textarea name="message" required data-error="Musisz wypełnić pole" id="field-message" pattern=".+">...</textarea>
+              <label for="field-message">Message*</label>
+              <textarea name="message" required data-error="Musisz wypełnić pole" id="field-message" pattern=".+">...</textarea>
             </div>
             <div class="form-row">
-                <label class="checkbox-cnt">
+              <label class="checkbox-cnt">
                     <input type="checkbox" required data-error="Musisz wypełnić pole" name="regulation">
                     <i class="state" aria-hidden="true"></i>
                     <span>Wyrażam zgodę na używanie przez Trust IT Sp. z.o.o., z siedzibą przy ul. Wróblewskiego 18/103, 93-578 Łódź, telekomunikacyjnych urządzeń końcowych, których jestem użytkownikiem, dla celów marketingu bezpośredniego zgodnie z art. 172 ustawy z dnia 16 lipca 2004 r. Prawo telekomunikacyjne (Dz.U. 2004 nr 171 poz. 1800).*</span>
                 </label>
             </div>
             <div class="form-row">
-                <button type="submit" class="submit-btn">
+              <button type="submit" class="submit-btn">
                     Wyślij
                 </button>
             </div>
 
-        </form>
-      </div>
+          </form>
+        </div>
         <div class="col-sm">
           <div class="block">
-          <span class="contact1">Zadzwoń</span> <span class="contact2">12 234 56 78</span>
-          <div class="footer1">
-            <p>  VERICOM usługi informatyczne </p>
-            <p>  Tel:  502 481 334 </p>
-            <p>  Parkowa 53 /2</p>
-            <p>  41-303 Dąbrowa Górnicza </p>
-            <p>  NIP: 629-207-53-89 </p>
-          </div>
+            <span class="contact1">Zadzwoń</span> <span class="contact2">12 234 56 78</span>
+            <div class="footer1">
+              <p> VERICOM usługi informatyczne </p>
+              <p> Tel: 502 481 334 </p>
+              <p> Parkowa 53 /2</p>
+              <p> 41-303 Dąbrowa Górnicza </p>
+              <p> NIP: 629-207-53-89 </p>
+            </div>
           </div>
 
 
 
         </div>
 
-    <!-- </div> -->
-  </footer>
-      </section>
-    </main>
+        <!-- </div> -->
+      </footer>
+    </section>
+  </main>
 
 
 
-    <script src="js/bootstrap.min.js" ></script>
-    <script src="outdatedbrowser.min.js"></script>
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://code.jquery.com/jquery-migrate-3.0.1.js"></script>
-    <script src="js.js"></script>
-    <script src="scripts.js"></script>
-  </body>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="outdatedbrowser.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://code.jquery.com/jquery-migrate-3.0.1.js"></script>
+  <script src="js.js"></script>
+  <script src="js2.js"></script>
+  <script src="scripts.js"></script>
+</body>
+
 </html>
