added second greybox -  changed content

--- a/coppy.html
+++ b/coppy.html
@@ -7,5 +7,9 @@
   <li>Specjalistyczna wiedza oraz doświadczenie</li>
   <li>Bezpieczeństwo danych</li>
 
-</ul> 
+</ul>
 znaczki jakośi
+
+
+          <p>w oparciu o nasze doświadczenia, wypracowaliśmy efektywny sposób obsługi i zarządzania systemami informatycznymi naszych klientów. Trzonem tego systemu jest zdobyta i stale poszerzana wiedza naszych pracowników i współpracowników.
+            <p>Naszym głównym atutem jest jakość świadczonych usług. Obsługujemy zarówno klientów biznesowych, instytucje państwowe, jednostki edukacyjne jak i osoby prywatne, w gronie naszych klientów znajdują się duże przedsiębiorstwa i koncerny międzynarodowe.
