--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="test.css" rel="stylesheet" type="text/css" media="all">
 
   <link href="hamburger.css" rel="stylesheet" type="text/css" media="all">
-      <link href="progressbar.css" rel="stylesheet" type="text/css" media="all">
+  <link href="progressbar.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body onload="init()">
@@ -66,57 +66,56 @@
           <div class="row row-50 justify-content-center justify-content-lg-between">
             <div class="col-md-6 col-lg-6 col-xs-6 animated zoomIn" id="about">
               <h3>  O NAS </h3>
-  <p>           <img src="img/Logo.png" alt="OutSourcing IT"  height="80" width="140" style="float:left; margin:0.4rem"  >  już<b> od 7 lat specjalizuje się w kompleksowym wsparciu informatycznym przedsiębiorstw.</b>
-              Naszym przesłaniem jest całościowe podejście do oczekiwań i zadań stawianych nam przez naszych Klientów.</p>
+              <p> <img src="img/Logo.png" alt="OutSourcing IT" height="80" width="150" style="float:left; margin:0.4rem"> już<b> od 7 lat specjalizuje się w kompleksowym wsparciu informatycznym przedsiębiorstw.</b> Naszym przesłaniem jest całościowe podejście
+                do oczekiwań i zadań stawianych nam przez naszych Klientów.</p>
 
-        <p>  Zapewniamy przedsiębiorstwom pełną<b> opiekę informatyczną realizowaną w modelu outsourcingowym.</b>
-           Naszym celem jest zabezpieczenie ciągłości pracy oraz bezpieczeństwa systemów informatycznych Klienta.</p>
+              <p> Zapewniamy przedsiębiorstwom pełną<b> opiekę informatyczną realizowaną w modelu outsourcingowym.</b> Naszym celem jest zabezpieczenie ciągłości pracy oraz bezpieczeństwa systemów informatycznych Klienta.</p>
             </div>
             <div class="col-md-6 col-lg-6 col-xs-6">
-              <main>
-  <div class="main-content">
-    <div id="example-1" class="examples">
-      <div class="cssProgress">
-        <div class="progress1">
-          <div class="cssProgress-bar" data-percent="75" style="width: 75%;">
-            <span class="cssProgress-label first75" >75%</span>
-          </div>
-        </div>
-      </div>
-      <div class="cssProgress">
-        <div class="progress1">
-          <div class="cssProgress-bar" data-percent="65" style="width: 65%;">
-            <span class="cssProgress-label">65%</span>
-          </div>
-        </div>
-      </div>
-      <div class="cssProgress">
-        <div class="progress1">
-          <div class="cssProgress-bar" data-percent="55" style="width: 55%;">
-            <span class="cssProgress-label">55%</span>
-          </div>
-        </div>
-      </div>
-      <div class="cssProgress">
-        <div class="progress1">
-          <div class="cssProgress-bar" data-percent="45" style="width: 45%;">
-            <span class="cssProgress-label">45%</span>
-          </div>
-        </div>
-      </div>
-      <div class="cssProgress">
-        <div class="progress1">
-          <div class="cssProgress-bar" data-percent="35" style="width: 35%;">
-            <span class="cssProgress-label">35%</span>
-          </div>
-        </div>
-      </div>
+              <div>
 
-    </div><!-- @end #example-1 -->
-</main><!-- @end main -->
+                <div id="example-1" style="margin-top: 1%;">
+                  <div class="cssProgress">
+                    <div class="progress1">
+                      <p>Zadowolonych Klientów</p>
+                      <div class="cssProgress-bar" data-percent="98" style="width: 75%;">
+                        <span class="cssProgress-label first75">98%</span>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="cssProgress">
+                    <div class="progress1">
+                      <p>Dotrzymany czas reakcji</p>
+                      <div class="cssProgress-bar" data-percent="94" style="width: 65%;">
+                        <span class="cssProgress-label">65%</span>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="cssProgress">
+                    <div class="progress1">
+                      <p>Wdrożonych sytemów w wyznaczonym terminie</p>
+                      <div class="cssProgress-bar" data-percent="100" style="width: 55%;">
+                        <span class="cssProgress-label">100%</span>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="cssProgress">
+                    <div class="progress1">
+                      <p>Realizacja zamówień w terminie</p>
+                      <div class="cssProgress-bar" data-percent="95" style="width: 45%;">
+                        <span class="cssProgress-label">95%</span>
+                      </div>
+                    </div>
+                  </div>
 
 
-              <!-- <img class="img-responsive" src="img/header2.jpg" alt="" width="580" height="350"> -->
+                </div>
+                <!-- @end #example-1 -->
+              </div>
+
             </div>
           </div>
         </div>
@@ -125,12 +124,46 @@
         <div class="container">
           <div class="row row-50 justify-content-center justify-content-lg-between">
             <div class="col-md-12 col-lg-12 col-xs-12 animated fadeInUp">
-              <h3>DLACZEGO MY?</h3>
-              <div class="divide"> </div>
-              <div class="arrow-down"> </div>
-              <p>w oparciu o nasze doświadczenia, wypracowaliśmy efektywny sposób obsługi i zarządzania systemami informatycznymi naszych klientów. Trzonem tego systemu jest zdobyta i stale poszerzana wiedza naszych pracowników i współpracowników.
-                <p>Naszym głównym atutem jest jakość świadczonych usług. Obsługujemy zarówno klientów biznesowych, instytucje państwowe, jednostki edukacyjne jak i osoby prywatne, w gronie naszych klientów znajdują się duże przedsiębiorstwa i koncerny międzynarodowe.
-            </div>
+              <h2>
+              CZYM SIĘ ZAJMUJEMY
+              </h2>
+          <div class="under-text">  Sprawdź w jakich dziedzinach IT specjalizujemy się </div>
+    </div>
+    <div class="row">
+      <div class="col-sm ">
+        <div class="icon service">
+        </div>
+        <h1>
+                    <a href=""> OPIEKA INFORMATYCZNA FIRM    </a>
+
+                   </h1>
+        <p>Zapewniamy kompleksowe wsparcie w zakresie opieki nad sprzętem IT, </P>
+      </div>
+      <div class="col-sm ">
+        <div class="icon linechart">
+        </div>
+        <h1>
+              <a href="">SYSTEMY IT NA ZAMÓWIENIE</a>
+              </h1>
+        <p style="padding-top: 1.2rem;">Specjalizujemy się w projektowaniu systemów informatycznych</P>
+      </div>
+      <div class="col-sm ">
+        <div class="icon scheme">
+        </div>
+      <h1>
+          <a href=""> OBUDOWY I KIESZENIE ICY DOCK </a>
+         </h1>
+        <p>Jesteśmy wyłącznym dystrybutorem w Polsce Urządzeń Pamięci Masowych i Archiwizacji Danych</P>
+      </div>
+      <div class="col-sm ">
+        <div class="icon settings">
+        </div>
+        <h1>
+            <a href=""> AUDYTY BEZPIECZEŃSTWA I TESTY PENETRACYJNE </a>
+            </h1>
+        <p>Poszukując najlepszych rozwiązań dla naszych Klientów, stale współpracujemy z najlepszymi praktykami</P>
+      </div>
+    </div>
           </div>
         </div>
       </div>
@@ -258,7 +291,7 @@
   <script src="js.js"></script>
   <script src="js2.js"></script>
   <script src="scripts.js"></script>
-    <script src="Scroll.js"></script>
+  <script src="Scroll.js"></script>
 </body>
 
 </html>
