--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
   <link href="Contact.css" rel="stylesheet" type="text/css" media="all">
   <link href="Animate.css" rel="stylesheet" type="text/css" media="all">
   <link href="test.css" rel="stylesheet" type="text/css" media="all">
-
+  <link href="odometer.css" rel="stylesheet" type="text/css" media="all">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="hamburger.css" rel="stylesheet" type="text/css" media="all">
   <link href="progressbar.css" rel="stylesheet" type="text/css" media="all">
+  <link href="portfolio.css" rel="stylesheet" type="text/css" media="all">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 
 <body onload="init()">
@@ -63,7 +67,7 @@
 
       <div class="contentboxwhite" id="section1">
         <div class="container">
-          <div class="row row-50 justify-content-center justify-content-lg-between">
+          <div class="row row-50 justify-content-center justify-content-lg-between container-mrgin">
             <div class="col-md-6 col-lg-6 col-xs-6 animated zoomIn" id="about">
               <h3>  O NAS </h3>
               <p> <img src="img/Logo.png" alt="OutSourcing IT" height="80" width="150" style="float:left; margin:0.4rem"> już<b> od 7 lat specjalizuje się w kompleksowym wsparciu informatycznym przedsiębiorstw.</b> Naszym przesłaniem jest całościowe podejście
@@ -122,164 +126,288 @@
       </div>
       <div class="contentboxgrey">
         <div class="container">
-          <div class="row row-50 justify-content-center justify-content-lg-between">
-            <div class="col-md-12 col-lg-12 col-xs-12 animated fadeInUp">
-              <h2>
+          <div class="row row-50 justify-content-center justify-content-lg-between container-mrgin">
+            <div class="col-md-12 col-lg-12 col-xs-12">
+              <div class="animated fadeInUp">
+                <h2>
               CZYM SIĘ ZAJMUJEMY
               </h2>
-          <div class="under-text">  Sprawdź w jakich dziedzinach IT specjalizujemy się </div>
-    </div>
-    <div class="row">
-      <div class="col-sm ">
-        <div class="icon service">
-        </div>
-        <h1>
+              </div>
+              <div class="under-text animated fadeInUp"> Sprawdź w jakich dziedzinach IT specjalizujemy się </div>
+            </div>
+            <div class="row">
+              <div class="col-sm  animated fadeInLeft">
+                <div class="icon service">
+                </div>
+                <h1>
                     <a href=""> OPIEKA INFORMATYCZNA FIRM    </a>
 
                    </h1>
-        <p>Zapewniamy kompleksowe wsparcie w zakresie opieki nad sprzętem IT, </P>
-      </div>
-      <div class="col-sm ">
-        <div class="icon linechart">
-        </div>
-        <h1>
+                <p style="padding-top: 1.2rem;">Zapewniamy kompleksowe wsparcie w zakresie opieki nad sprzętem IT, </P>
+              </div>
+              <div class="col-sm animated fadeInLeft" style="    animation-delay: 400ms;">
+                <div class="icon linechart">
+                </div>
+                <h1>
               <a href="">SYSTEMY IT NA ZAMÓWIENIE</a>
               </h1>
-        <p style="padding-top: 1.2rem;">Specjalizujemy się w projektowaniu systemów informatycznych</P>
-      </div>
-      <div class="col-sm ">
-        <div class="icon scheme">
-        </div>
-      <h1>
+                <p style="padding-top: 1.2rem;">Specjalizujemy się w projektowaniu systemów informatycznych</P>
+              </div>
+              <div class="col-sm animated fadeInLeft" style="    animation-delay: 800ms;">
+                <div class="icon scheme">
+                </div>
+                <h1>
           <a href=""> OBUDOWY I KIESZENIE ICY DOCK </a>
          </h1>
-        <p>Jesteśmy wyłącznym dystrybutorem w Polsce Urządzeń Pamięci Masowych i Archiwizacji Danych</P>
-      </div>
-      <div class="col-sm ">
-        <div class="icon settings">
-        </div>
-        <h1>
+                <p>Jesteśmy wyłącznym dystrybutorem w Polsce Urządzeń Pamięci Masowych i Archiwizacji Danych</P>
+              </div>
+              <div class="col-sm animated fadeInLeft" style="    animation-delay: 1200ms;">
+                <div class="icon settings">
+                </div>
+                <h1>
             <a href=""> AUDYTY BEZPIECZEŃSTWA I TESTY PENETRACYJNE </a>
             </h1>
-        <p>Poszukując najlepszych rozwiązań dla naszych Klientów, stale współpracujemy z najlepszymi praktykami</P>
-      </div>
-    </div>
+                <p>Poszukując najlepszych rozwiązań dla naszych Klientów, stale współpracujemy z najlepszymi praktykami</P>
+              </div>
+            </div>
           </div>
         </div>
       </div>
 
 
 
-      <div class="contentboxwhite2" id="section2">
+      <div class="contentboxwhite">
         <div class="container">
-          <h3>OFERTA</h3>
-          <div class="divide"> </div>
-          <div class="arrow-down"> </div>
-          <div class="row">
-            <div class="col-sm center">
-              <div class="icon service">
-              </div>
-              <h2>  Quick Support </h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
-            </div>
-            <div class="col-sm center">
-              <div class="icon linechart">
-              </div>
-              <h2>  Improvement </h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
-            </div>
-            <div class="col-sm center">
-              <div class="icon scheme">
-              </div>
-              <h2> Architecture </h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
-            </div>
-            <div class="col-sm center">
-              <div class="icon settings">
-              </div>
-              <h2> Fix </h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
-            </div>
+          <div class="animated fadeInUp">
+            <h2>
+          REFERENCJE
+          </h2>
           </div>
+          <div class="under-text animated fadeInUp"> Sprawdź wybrane opinie na temat naszej pracy </div>
+
           <div class="row">
-            <div class="col-sm center">
-              <div class="icon service">
+
+
+            <div class="col parent" onclick="">
+              <div class="child bg-one" id="portfolio">
+                <a href="#">Los Angeles</a>
               </div>
-              <h2>  Quick Support </h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
             </div>
-            <div class="col-sm center">
-              <div class="icon linechart">
+
+            <div class="col parent" onclick="">
+              <div class="child bg-two" id="portfolio">
+                <a href="#">London</a>
               </div>
-              <h2>  Improvement </h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
             </div>
-            <div class="col-sm center">
-              <div class="icon scheme">
+
+            <div class="col parent" onclick="">
+              <div class="child bg-three" id="portfolio">
+                <a href="#">New York</a>
               </div>
-              <h2> Architecture </h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
             </div>
-            <div class="col-sm center">
-              <div class="icon settings">
+
+            <div class="col parent" onclick="">
+              <div class="child bg-four" id="portfolio">
+                <a href="#">Hollywood</a>
               </div>
-              <h2> Fix </h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
+            </div>
+
+            <div class="col parent" onclick="">
+              <div class="child bg-five" id="portfolio">
+                <a href="#">Dubai</a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="contentboxgreyhands">
+        <div class="container" style="margin-left: 0px;">
+          <div class="row">
+            <div class="col different-img"></div>
+            <div class="col" style=" padding-left: 40px;   padding-top: 3%;  padding-bottom:  6%;   ">
+
+              <div class="animated fadeInUp">
+                <h2>CO NAS WYRÓŻNIA</h2>
+              </div>
+
+              <div class="under-text animated fadeInUp"> Nasze atuty - Oferowane korzyści </div>
+
+              <div class="animated fadeInDown thumb-text" style="    animation-delay: 600ms;">
+                <div class="thumb">
+                  <i class="far fa-thumbs-up" style="-webkit-font-smoothing: antialiased;"></i>
+                </div>
+                <h4>21 letnie doświadczenie! </h4>
+                <div class="diffrent-text">Mamy 21 letnie doświadczenie w kompleksowej obsłudze informatycznej firm </div>
+              </div>
+
+              <div class="animated fadeInDown thumb-text" style="    animation-delay: 900ms;">
+                <div class="thumb">
+                  <i class="far fa-thumbs-up" style="-webkit-font-smoothing: antialiased;"></i>
+                </div>
+                <h4>Jakość potwierdzona zaufaniem</h4>
+                <div class="diffrent-text">Zaufało nam już kilkudziesięciu klientów z wielu branż</div>
+              </div>
+
+              <div class="animated fadeInDown thumb-text" style="    animation-delay: 1200ms;">
+                <div class="thumb">
+                  <i class="far fa-thumbs-up" style="-webkit-font-smoothing: antialiased;"></i>
+                </div>
+                <h4>Szybki czas reakcji</h4>
+                <div class="diffrent-text">Oferujemy najwyższe standardy obsługi i błyskawiczny czas reakcji na zgłoszenia</div>
+              </div>
+
+              <div class="animated fadeInDown thumb-text" style="    animation-delay: 1500ms;">
+                <div class="thumb">
+                  <i class="far fa-thumbs-up" style="-webkit-font-smoothing: antialiased;"></i>
+                </div>
+                <h4>Lojalność i profesjonalizm</h4>
+                <div class="diffrent-text">Mogą być Państwo pewni, że nasza kadra to osoby doświadczone z wieloletnim stażem</div>
+              </div>
+
             </div>
           </div>
         </div>
       </div>
+
+      <div class="content-box-empty">
+
+          <div class="container-image">
+
+            <h2>KILKA FAKTÓW O NAS</h2>
+
+            <div class="under-text">VeriCom w liczbach</div>
+
+            <div class="row container-mrgin">
+
+              <div class="col padding-bottom">
+                <div id="odometer1" class="odometer under-text-small-icon">1</div>
+                <div class="icon-small">
+                  <i class="fas fa-desktop"></i>
+                </div>
+                </spa>
+                <div class="odometer-text"> OBSŁUGIWANYCH STACJI ROBOCZYCH </div>
+              </div>
+
+              <div class="col padding-bottom">
+                <div id="odometer2" class="odometer under-text-small-icon">1</div>
+                <div class="icon-small">
+                  <i class="fas fa-bars"></i>
+                </div>
+                <div class="odometer-text"> SERWERÓW POD OPIEKĄ </div>
+              </div>
+
+              <div class="col padding-bottom">
+                <div id="odometer3" class="odometer under-text-small-icon">1</div>
+                <div class="icon-small">
+                  <i class="fas fa-user"></i>
+                </div>
+                <div class="odometer-text"> OBSŁUGIWANYCH PRZEDSIĘBIORSTW </div>
+              </div>
+
+              <div class="col padding-bottom">
+                <div id="odometer4" class="odometer under-text-small-icon">1</div>
+                <div class="icon-small">
+                  <i class="far fa-calendar-alt"></i>
+                </div>
+                <div class="odometer-text"> LAT DOŚWIADCZENIA NA RYNKU IT </div>
+              </div>
+
+            </div>
+          </div>
+
+      </div>
+
+      <div class="contentboxwhite">
+        <div class="container">
+          <div class="animated fadeInUp">
+            <h2>REFERENCJE</h2>
+          </div>
+
+          <div class="under-text animated fadeInUp"> Sprawdź wybrane opinie na temat naszej pracy </div>
+
+          <div class="row">
+
+
+            <div class="col">
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="content-box-empty">
+        <div class="container-transparent">
+        <div class="row container-mrgin">
+          <div class="col ">
+            <form class="form" id="contactForm" method="post" novalidate action="send-script.php">
+              <div class="form-row">
+                <label for="field-name">Name</label>
+                <input type="text" name="name" required id="field-name" data-error="Wypełnij to pole" pattern="[a-zA-ZąĄććęęłŁńŃóÓśŚżŻŹŹ ]+">
+              </div>
+              <div class="form-row">
+                <label for="field-email">Email</label>
+                <input type="email" name="email" required id="field-email" data-error="Wpisz poprawny email" pattern="[^@\s]+@[^@\s]+\.[^@\s]+">
+              </div>
+              <div class="form-row">
+                <label for="field-message">Message</label>
+                <textarea name="message" required data-error="Musisz wypełnić pole" id="field-message" pattern=".+">...</textarea>
+              </div>
+              <div class="form-row">
+                <label class="checkbox-cnt">
+                      <input type="checkbox" required data-error="Musisz wypełnić pole" name="regulation">
+                      <i class="state" aria-hidden="true"></i>
+                      <span>Wyrażam zgodę na używanie przez Trust IT Sp. z.o.o., z siedzibą przy ul. Wróblewskiego 18/103, 93-578 Łódź, telekomunikacyjnych urządzeń końcowych, których jestem użytkownikiem, dla celów marketingu bezpośredniego zgodnie z art. 172 ustawy z dnia 16 lipca 2004 r. Prawo telekomunikacyjne (Dz.U. 2004 nr 171 poz. 1800).*</span>
+                  </label>
+              </div>
+              <div class="form-row">
+                <button type="submit" class="submit-btn">
+                      Wyślij
+                  </button>
+              </div>
+
+            </form>
+          </div>
+          <div class="col">
+            <div class="block">
+              <span class="contact1">Zadzwoń</span> <span class="contact2">12 234 56 78</span>
+              <div class="footer1">
+                <p> VERICOM usługi informatyczne </p>
+                <p> Tel: 502 481 334 </p>
+                <p> Parkowa 53 /2</p>
+                <p> 41-303 Dąbrowa Górnicza </p>
+                <p> NIP: 629-207-53-89 </p>
+              </div>
+            </div>
+
+
+
+          </div>
+
+        </div>
+        </div>
+      </div>
+
+
       <!-- <div class="contentboxwhite" id="section2">
   Sekcja czwarta
 </div> -->
       <footer id="section3">
-        <!-- <div class="row"> -->
-        <div class=" col-sm ">
-          <form class="form" id="contactForm" method="post" novalidate action="send-script.php">
-            <div class="form-row">
-              <label for="field-name">Name*</label>
-              <input type="text" name="name" required id="field-name" data-error="Wypełnij to pole" pattern="[a-zA-ZąĄććęęłŁńŃóÓśŚżŻŹŹ ]+">
+        <div class="container-transparent">
+          <div class="row">
+            <div class="col">
+              asdasd
             </div>
-            <div class="form-row">
-              <label for="field-email">Email*</label>
-              <input type="email" name="email" required id="field-email" data-error="Wpisz poprawny email" pattern="[^@\s]+@[^@\s]+\.[^@\s]+">
+            <div class="col">
+              dsadas
             </div>
-            <div class="form-row">
-              <label for="field-message">Message*</label>
-              <textarea name="message" required data-error="Musisz wypełnić pole" id="field-message" pattern=".+">...</textarea>
-            </div>
-            <div class="form-row">
-              <label class="checkbox-cnt">
-                    <input type="checkbox" required data-error="Musisz wypełnić pole" name="regulation">
-                    <i class="state" aria-hidden="true"></i>
-                    <span>Wyrażam zgodę na używanie przez Trust IT Sp. z.o.o., z siedzibą przy ul. Wróblewskiego 18/103, 93-578 Łódź, telekomunikacyjnych urządzeń końcowych, których jestem użytkownikiem, dla celów marketingu bezpośredniego zgodnie z art. 172 ustawy z dnia 16 lipca 2004 r. Prawo telekomunikacyjne (Dz.U. 2004 nr 171 poz. 1800).*</span>
-                </label>
-            </div>
-            <div class="form-row">
-              <button type="submit" class="submit-btn">
-                    Wyślij
-                </button>
-            </div>
-
-          </form>
-        </div>
-        <div class="col-sm">
-          <div class="block">
-            <span class="contact1">Zadzwoń</span> <span class="contact2">12 234 56 78</span>
-            <div class="footer1">
-              <p> VERICOM usługi informatyczne </p>
-              <p> Tel: 502 481 334 </p>
-              <p> Parkowa 53 /2</p>
-              <p> 41-303 Dąbrowa Górnicza </p>
-              <p> NIP: 629-207-53-89 </p>
+            <div class="col">
+              ssdada
             </div>
           </div>
-
-
-
         </div>
 
-        <!-- </div> -->
       </footer>
     </section>
   </main>
@@ -292,6 +420,7 @@
   <script src="js2.js"></script>
   <script src="scripts.js"></script>
   <script src="Scroll.js"></script>
+  <script src="odometer.js"></script>
 </body>
 
 </html>
