--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
           </div>
           <div class="under-text">Co nasi Klienci o nas mówią</div>
           <!-- need to change this proprty to width 80% and eveywhere  style="margin: auto; width:80%; text-align: center;"  style="max-width: 600px; align-items: center;"-->
-          <div class="row justify-content-center justify-content-lg-between" id="quotes">
+          <div class="row justify-content-center justify-content-lg-between" id="quotes" onload=" carousel()">
             <div class="margin-auto">
               <div class="col">
                 <div class="mySlides animated fadeIn"><i class="fas fa-quote-left"></i> Intuicyjna funkcjonalność systemu pozwala na łatwą i bezproblemową obsługę a stała gotowość pracowników firmy Mospan w pełni zapewnia wsparcie <i class="fas fa-quote-right"></i></div>
