website version 970px menu ready

--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
             </div>
               </div>
             <div id="navigation" class="menu menu-link">
-
                 <ul class="topnav" id="myTopnav">
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">O Nas</a></li>
@@ -91,7 +90,6 @@
                   <li><a href="/">Pomoc zdalna</a></li>
                   <li><a href="/">Kontakt</a></li>
                 </ul>
-        
             </div>
         </div>
       </header>
@@ -192,7 +190,7 @@
       </div>
       <div class="content-box-white">
         <div class="container-fluid">
-          <div class="hidden-to-animate">
+          <div class="hidden-to-animate" style="    padding-top: 3%;">
             <h2>
               REFERENCJE
             </h2>
